# statix

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ipfs-id.txt
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: rust.yml
src/: folder.rs  handler.rs  lib.rs  main.rs  mime.json
src/handler/: badRequest.rs  folder.rs  serveFile.rs  unauthorized.rs
src/handler/serveFile/: isBin.rs
test/: 404.html  README.md  index.html
test/subfolder/: index.html
test/subfolder2/: hi.html
