[package]
name = "statix"
version = "4.3.3"
edition = "2018"
description = "A CLI http server for static file sharing"
license = "MIT"
authors = ["Octalbyte <octalbyte0o52@protonmail.com>"]
repository = "https://github.com/statix-server/statix"
homepage = "https://github.com/statix-server/"
keywords = ["server", "webserver", "http", "html", "static"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
tiny_http = "0.9"
infer = "0.5.0"
clap = { version = "3.0.0-rc.8", features = ["derive"] }

