[package]
name = "statix"
version = "4.7.2"
edition = "2018"
description = "A CLI http server for static file sharing"
license = "MIT"
authors = ["Octalbyte <octalbyte0o52@protonmail.com>"]
repository = "https://github.com/Octalbyte/statix"
keywords = ["server", "webserver", "http", "html", "static"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
tiny_http = "0.10"
infer = "0.6.0"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
istor = "0.1.2"
