[package]
name = "statix"
version = "4.8.3"
edition = "2018"
description = "A CLI http server for static file sharing"
license = "MIT"
authors = ["Octalbyte <octalbyte0o52@protonmail.com>"]
repository = "https://github.com/Octalbyte/statix"
keywords = ["server", "webserver", "http", "html", "static"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
tiny_http = "0.11"
infer = "0.8.1"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
istor = "0.2.1"
base64 = "0.13.0"
ascii = "1.0.0"
ctrlc = { version = "3.0", features = ["termination"] }